feature(icon): icon system 정리 & 마크다운 추가

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   cursor: pointer;
 }
 
+.customSvgColor > path {
+  fill: none;
+}
+
 div, a, span, p, pre, input {
   font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
